--- a/Knausrr/src/main/resources/application.properties
+++ b/Knausrr/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 server.error.include-message=always
+
+
+spring.jackson.default-property-inclusion = NON_NULL
